# prod26-finals-solution

./: .gitignore  .gitlab-ci.yml  OLD_README.md  README.md  docker-compose.autotest.yml  docker-compose.yml  nginx.conf  q.txt
alphabet-backend/: .coveragerc  .dockerignore  .flake8  .importlinter  Dockerfile  alphabet.yml  app.py  dsltest.py  justfile  mypy.ini  pyproject.toml  ruff.toml  start.sh  start_prod.sh  start_test.sh
alphabet-backend/scripts/: pkgs.py
alphabet-backend/src/: clickhouse_init.sql  cooldown.lua  test_data.sql
alphabet-backend/src/alembic/: env.py  script.py.mako
alphabet-backend/src/alembic/versions/: 477a5f9ac756_create_metrics_and_reports.py  6d902520d9cc_create_flags_and_experiments.py  99b9bb4b7d51_create_notifications.py  a3ca48c27097_create_guard_rules_and_audit.py  c6361d30d175_add_access_tables.py  e8d32b73589f_create_event_types.py
alphabet-backend/src/alphabet/access/: domain.py
alphabet-backend/src/alphabet/bootstrap/: attribution_worker_entrypoint.py  cli.py  config.py  html_server.py  instant_notifier.py  live_ready.py  logging.py  service_endpoints.py  web_app.py
alphabet-backend/src/alphabet/decisions/: application.py  domain.py  presentation.py
alphabet-backend/static/: mdl.css
alphabet-backend/templates/: index.html
alphabet-backend/tests/integration/: config.py  conftest.py
docs/: README.md  macros.py  mkdocs.yml  pyproject.toml
docs/docs/: ai-usage.md  automation.md  compliance-matrix.md  glossary.md  highload.md  index.md  ops-examples.md  repo-map.md
docs/docs/adr/: 001-auth.md  002-decision.md  003-notification-dsl.md  004-notification-grouping.md  005-events-collection.md  006-event-type-query-opt.md  007-conflict-resolution.md  008-insights.md  009-event-schema.md  010-arch.md  011-stack.md  012-metric-dsl.md  toc.md
docs/docs/diagram/: c4.aisle  c4.md  component.puml  containers.puml  context.puml  db.md
docs/docs/getting_started/: 01-start.md  02-criteria.md  03-criteria.md  04-criteria.md  05-criteria.md  06-criteria.md  additional-criteria.md
docs/docs/spec/: metalang.md  metric-conf.md  metric-dsl.md  notification-dsl.md  target-dsl.md  toc.md
docs/docs/task/: criteria.md  task.md
docs/docs/usecases/: 01-access-control.md  02-feature-flags-experiments.md  03-decision-making.md  04-stat-events.md  05-reports.md  06-guardrails.md  07-notifications.md  08-insights-ui.md  11-conflicts-resolution.md
dummy-iap/: .dockerignore  Dockerfile  (+4 more)
sys-tests/: alphabet.test.yml  config.toml  pyproject.toml
sys-tests/tests/: client.py  config.py  conftest.py  helpers.py
sys-tests/tests/b00/: test_admin_user_management.py  test_approver_group_management.py  test_user_activation.py
sys-tests/tests/b02/: test_01_02_default.py  test_03_applicable.py  test_04_determinism.py  test_05_distribution.py  test_06_cooldown_and_conflicts.py
sys-tests/tests/b03/: helpers.py  test_01_send_to_review.py  test_02_approve.py  test_03_start.py  test_04_block_invalid_transition.py  test_05_review_policy.py
sys-tests/tests/b04/: __init__.py  test_01_field_validation.py  test_02_deduplication.py  test_03_attribution.py  test_04_stress.py
sys-tests/tests/b05/: _test_05_participation_limit.py  test_01_guardrail_storage.py  test_02_guardrail_detection.py  test_03_guardrail_action.py  test_04_guardrail_audit.py  test_05_participation_limit.py
sys-tests/tests/b06/: test_01.py  test_02_variant_breakdown.py  test_03_selected_metrics.py  test_04_experiment_outcome.py  test_05_decision_justification.py
sys-tests/tests/f01/: test_works.py
sys-tests/tests/f02/: test_distribution_query.py  test_event_insights.py
sys-tests/tests/f03/: test_works.py
sys-tests/tests/scenario/: test_1000_users.py
(+145 files in other folders)
