[project]
name = "alphabet-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "adaptix>=3.0.0b11",
    "alembic>=1.18.4",
    "click>=8.3.1",
    "dishka>=1.8.0",
    "fuente",
    "inflection>=0.5.1",
    "litestar[prometheus,standard]>=2.21.0",
    "psycopg[binary,pool]>=3.3.2",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "uuid7-standard>=1.1.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.uv.sources]
fuente = { git = "https://github.com/Tishka17/fuente.git", rev = "e295ec536dbd3aaf061dd2a82e1c504562b73e4a" }

[dependency-groups]
lint = [
    "import-linter>=2.10",
    "mypy>=1.19.1",
    "ruff>=0.15.1",
    "wemake-python-styleguide>=1.5.0",
]

[project.scripts]
alphabet = "alphabet.bootstrap.cli:main"

