[project]
name = "sys-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    #"psycopg2>=2.9.11",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
]
